--- a/App/src/main/resources/views/students_view.fxml
+++ b/App/src/main/resources/views/students_view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StudentsView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StudentsView">
    <children>
       <Button layoutX="360.0" layoutY="128.0" mnemonicParsing="false" onAction="#changeToCourses" text="Button" />
    </children>
