--- a/App/src/main/resources/views/course_creator_view.fxml
+++ b/App/src/main/resources/views/course_creator_view.fxml
@@ -1,29 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="720.0" prefWidth="1280.0"
-            style="-fx-background-color: #0fa000" fx:controller="views.CourseCreatorView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CourseCreatorView">
 
-    <TextField AnchorPane.topAnchor="10.0"
-               AnchorPane.leftAnchor="10.0"
-               promptText="Nombre"
-               focusTraversable="false" fx:id="txtName"/>
-
-    <Button AnchorPane.topAnchor="60.0"
-            AnchorPane.leftAnchor="10.0"
-            text="registrar"
-            onAction="#addCourse" />
-
-    <Button AnchorPane.topAnchor="100.0"
-            AnchorPane.leftAnchor="10.0"
-            text="regresar"
-            onAction="#back" />
+    <Button onAction="#back" prefHeight="30.0" prefWidth="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+   <AnchorPane layoutX="490.0" layoutY="110.0" prefHeight="500.0" prefWidth="300.0" style="-fx-background-color: #ffaa00; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-width: 1; -fx-border-color: #737373;" AnchorPane.topAnchor="110.0">
+      <children>
+      
+          <Button alignment="CENTER" layoutY="374.0" onAction="#addCourse" style="-fx-border-width: 1; -fx-border-color: #737373; -fx-border-radius: 0 0 8 8; -fx-background-radius: 0 0 8 8; -fx-background-color: #ffffff; -fx-cursor: hand;" text="Registrar" textAlignment="CENTER" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="-1.0">
+            <font>
+               <Font name="JetBrainsMono NF Regular" size="14.0" />
+            </font>
+         </Button>
+      
+          <TextField fx:id="txtName" focusTraversable="false" layoutX="10.0" layoutY="32.0" prefHeight="25.0" promptText="Nombre" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="32.0">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </TextField>
+         <Label layoutX="18.0" layoutY="14.0" style="-fx-text-fill: #ffffff;" text="Nombre" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+            <font>
+               <Font name="JetBrainsMono NF Bold" size="16.0" />
+            </font>
+         </Label>
+         <Label layoutX="11.0" layoutY="61.0" style="-fx-text-fill: #ffffff;" text="Maestro" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="71.0">
+            <font>
+               <Font name="JetBrainsMono NF Bold" size="16.0" />
+            </font>
+         </Label>
+         <TextField fx:id="txtName1" focusTraversable="false" layoutX="12.0" layoutY="94.0" prefHeight="25.0" promptText="Maestro" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="94.0">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </TextField>
+         <Label layoutX="11.0" layoutY="123.0" style="-fx-text-fill: #ffffff;" text="Alumnos" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="133.0">
+            <font>
+               <Font name="JetBrainsMono NF Bold" size="16.0" />
+            </font>
+         </Label>
+         <TextField fx:id="txtName11" focusTraversable="false" layoutX="11.0" layoutY="156.0" prefHeight="25.0" promptText="Alumnos" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="156.0">
+            <font>
+               <Font size="14.0" />
+            </font>
+         </TextField>
+      </children>
+   </AnchorPane>
 
 </AnchorPane>
