--- a/App/src/main/resources/views/course_creator_view.fxml
+++ b/App/src/main/resources/views/course_creator_view.fxml
@@ -2,13 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CourseCreatorView">
 
-    <Button onAction="#back" prefHeight="30.0" prefWidth="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+    <Button onAction="#back" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: #ffaa00; -fx-background-radius: 0; -fx-text-fill: #fff;" text="" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <font>
+         <Font name="Font Awesome 6 Free Solid" size="16.0" />
+      </font></Button>
    <AnchorPane layoutX="490.0" layoutY="110.0" prefHeight="500.0" prefWidth="300.0" style="-fx-background-color: #ffaa00; -fx-background-radius: 8; -fx-border-radius: 8; -fx-border-width: 1; -fx-border-color: #737373;" AnchorPane.topAnchor="110.0">
       <children>
       
@@ -18,9 +23,9 @@
             </font>
          </Button>
       
-          <TextField fx:id="txtName" focusTraversable="false" layoutX="10.0" layoutY="32.0" prefHeight="25.0" promptText="Nombre" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="32.0">
+          <TextField fx:id="txtName" focusTraversable="false" layoutX="11.0" layoutY="33.0" prefHeight="25.0" promptText="Nombre" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="33.0">
             <font>
-               <Font size="14.0" />
+               <Font name="JetBrainsMono NF Regular" size="16.0" />
             </font>
          </TextField>
          <Label layoutX="18.0" layoutY="14.0" style="-fx-text-fill: #ffffff;" text="Nombre" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
@@ -33,9 +38,9 @@
                <Font name="JetBrainsMono NF Bold" size="16.0" />
             </font>
          </Label>
-         <TextField fx:id="txtName1" focusTraversable="false" layoutX="12.0" layoutY="94.0" prefHeight="25.0" promptText="Maestro" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="94.0">
+         <TextField fx:id="txtName1" focusTraversable="false" layoutX="12.0" layoutY="98.0" prefHeight="32.0" prefWidth="233.0" promptText="Maestro" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="11.0" AnchorPane.topAnchor="97.0">
             <font>
-               <Font size="14.0" />
+               <Font name="JetBrainsMono NF Regular" size="16.0" />
             </font>
          </TextField>
          <Label layoutX="11.0" layoutY="123.0" style="-fx-text-fill: #ffffff;" text="Alumnos" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="133.0">
@@ -43,11 +48,31 @@
                <Font name="JetBrainsMono NF Bold" size="16.0" />
             </font>
          </Label>
-         <TextField fx:id="txtName11" focusTraversable="false" layoutX="11.0" layoutY="156.0" prefHeight="25.0" promptText="Alumnos" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="156.0">
+         <Button alignment="CENTER" focusTraversable="false" layoutX="254.0" layoutY="97.0" mnemonicParsing="false" onAction="#selectTeacher" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #ffffff; -fx-text-fill: #ffaa00;" text="" textAlignment="CENTER" wrapText="true" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="97.0">
             <font>
-               <Font size="14.0" />
+               <Font name="Font Awesome 6 Free Regular" size="16.0" />
+            </font>
+         </Button>
+         <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="12.0" layoutY="158.0" prefHeight="106.0" prefWidth="278.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="157.0">
+            <content>
+               <ListView prefHeight="100.0" prefWidth="276.0" />
+            </content>
+         </ScrollPane>
+         <Button layoutX="12.0" layoutY="272.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="276.0" style="-fx-background-color: #fff;" text="Seleccionar" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0">
+            <font>
+               <Font name="JetBrainsMono NF Regular" size="16.0" />
+            </font>
+         </Button>
+         <TextField fx:id="txtName11" focusTraversable="false" layoutX="12.0" layoutY="317.0" prefHeight="32.0" prefWidth="233.0" promptText="Salon" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="11.0">
+            <font>
+               <Font name="JetBrainsMono NF Regular" size="16.0" />
             </font>
          </TextField>
+         <Button alignment="CENTER" focusTraversable="false" layoutX="259.0" layoutY="317.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #ffffff; -fx-text-fill: #ffaa00;" text="" textAlignment="CENTER" wrapText="true" AnchorPane.rightAnchor="10.0">
+            <font>
+               <Font name="Font Awesome 6 Free Regular" size="16.0" />
+            </font>
+         </Button>
       </children>
    </AnchorPane>
 
