--- a/App/src/main/resources/views/course_creator_view.fxml
+++ b/App/src/main/resources/views/course_creator_view.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CourseCreatorView">
@@ -38,7 +38,7 @@
                <Font name="JetBrainsMono NF Bold" size="16.0" />
             </font>
          </Label>
-         <TextField fx:id="txtName1" focusTraversable="false" layoutX="12.0" layoutY="98.0" prefHeight="32.0" prefWidth="233.0" promptText="Maestro" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="11.0" AnchorPane.topAnchor="97.0">
+         <TextField fx:id="txtTeacher" editable="false" focusTraversable="false" layoutX="12.0" layoutY="98.0" prefHeight="32.0" prefWidth="233.0" promptText="Maestro" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="11.0" AnchorPane.topAnchor="97.0">
             <font>
                <Font name="JetBrainsMono NF Regular" size="16.0" />
             </font>
@@ -55,7 +55,7 @@
          </Button>
          <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="12.0" layoutY="158.0" prefHeight="106.0" prefWidth="278.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="157.0">
             <content>
-               <ListView prefHeight="100.0" prefWidth="276.0" />
+               <VBox disable="true" fillWidth="false" prefHeight="200.0" prefWidth="100.0" />
             </content>
          </ScrollPane>
          <Button layoutX="12.0" layoutY="272.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="276.0" style="-fx-background-color: #fff;" text="Seleccionar" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0">
@@ -63,7 +63,7 @@
                <Font name="JetBrainsMono NF Regular" size="16.0" />
             </font>
          </Button>
-         <TextField fx:id="txtName11" focusTraversable="false" layoutX="12.0" layoutY="317.0" prefHeight="32.0" prefWidth="233.0" promptText="Salon" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="11.0">
+         <TextField fx:id="txtName11" editable="false" focusTraversable="false" layoutX="12.0" layoutY="317.0" prefHeight="32.0" prefWidth="233.0" promptText="Salon" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="11.0">
             <font>
                <Font name="JetBrainsMono NF Regular" size="16.0" />
             </font>
@@ -75,5 +75,10 @@
          </Button>
       </children>
    </AnchorPane>
+   <Label alignment="CENTER" layoutX="40.0" prefHeight="40.0" style="-fx-text-fill: #ffaa00;" text="| Crear curso |" textAlignment="CENTER" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="0.0">
+      <font>
+         <Font name="JetBrainsMono NF Regular" size="16.0" />
+      </font>
+   </Label>
 
 </AnchorPane>
