--- a/App/src/main/resources/views/teacher_selector_view.fxml
+++ b/App/src/main/resources/views/teacher_selector_view.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.TeacherSelectorView">
    <children>
-      <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="8.0" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0">
+      <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="8.0" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="72.0">
          <content>
             <VBox fx:id="list" prefHeight="200.0" prefWidth="100.0" />
          </content>
@@ -28,6 +28,11 @@
       <Label fx:id="alert" alignment="CENTER" text="No hay profesores registrados, intenta registrar algunos" textAlignment="CENTER" visible="false" wrapText="true" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="36.0">
          <font>
             <Font name="JetBrainsMono NF Regular" size="20.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="10.0" layoutY="36.0" prefHeight="41.0" prefWidth="500.0" style="-fx-text-fill: #ffaa00;" text="Profesores" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0">
+         <font>
+            <Font name="JetBrainsMono NF Regular" size="16.0" />
          </font>
       </Label>
    </children>
