--- a/App/src/main/resources/views/course_creator_view.fxml
+++ b/App/src/main/resources/views/course_creator_view.fxml
@@ -63,12 +63,12 @@
                <Font name="JetBrainsMono NF Regular" size="16.0" />
             </font>
          </Button>
-         <TextField fx:id="txtName11" editable="false" focusTraversable="false" layoutX="12.0" layoutY="426.0" prefHeight="32.0" prefWidth="380.0" promptText="Salon" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="11.0">
+         <TextField fx:id="txtClassroom" editable="false" focusTraversable="false" layoutX="12.0" layoutY="426.0" prefHeight="32.0" prefWidth="380.0" promptText="Salon" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="11.0">
             <font>
                <Font name="JetBrainsMono NF Regular" size="16.0" />
             </font>
          </TextField>
-         <Button alignment="CENTER" focusTraversable="false" layoutX="253.0" layoutY="427.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #ffffff; -fx-text-fill: #ffaa00; -fx-cursor: hand;" text="" textAlignment="CENTER" wrapText="true" AnchorPane.rightAnchor="10.0">
+         <Button alignment="CENTER" focusTraversable="false" layoutX="253.0" layoutY="427.0" mnemonicParsing="false" onAction="#selectClassroom" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #ffffff; -fx-text-fill: #ffaa00; -fx-cursor: hand;" text="" textAlignment="CENTER" wrapText="true" AnchorPane.rightAnchor="10.0">
             <font>
                <Font name="Font Awesome 6 Free Regular" size="16.0" />
             </font>
